ajout code html dans index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-En bas là
 
-bunbunbunbunbunbunbunbun
-
-
-bunbunbun
+<!Doctype>
+<html>
+<head>
+	<title>Index Git learn</title>
+</head>
+<body>
+	<main>
+		<h1>Apprentissage de Git</h1>
+	</main>
+</body>
+</html>
